@@ -1,7 +1,10 @@
 Author:
 Timo Teräs <timo.teras@iki.fi>
 
-Patches from:
-Steffen Schmidt
+Patches, or ideas from (in alphabetical order):
+David Ward
+Doug Kehn
+Halil Goektepe
 Natanael Copa
-Halil Goektepe (Deutsche Telekom DTAG Laboratories)
+Robin Hammond
+Steffen Schmidt
