@@ -2,7 +2,7 @@
 # Building opennhrp
 
 PACKAGE := opennhrp
-VERSION := 0.13.1
+VERSION := 0.14
 
 ##
 # Default directories
